fix: align items

--- a/src/components/exercise/style.css
+++ b/src/components/exercise/style.css
@@ -38,7 +38,7 @@
 .log-list {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    text-align: start;
 }
 
 .log-list p:hover {
